--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.0",
+    "@vue/cli-plugin-pwa": "^4.5.13",
     "idb": "^6.0.0",
     "uuid": "^8.3.2",
     "vue": "^3.0.5"
